--- a/docs-ref-autogen/com.microsoft.store.partnercenter.genericoperations.IEntityCreateOperations.yml
+++ b/docs-ref-autogen/com.microsoft.store.partnercenter.genericoperations.IEntityCreateOperations.yml
@@ -26,7 +26,7 @@ items:
   name: "create(T newEntity)"
   nameWithType: "IEntityCreateOperations<T,T1>.create(T newEntity)"
   fullName: "com.microsoft.store.partnercenter.genericoperations.IEntityCreateOperations<T,T1>.create(T newEntity)"
-  overload: "com.microsoft.store.partnercenter.genericoperations.IEntityCreateOperations<T,T1>.create*"
+  overload: "com.microsoft.store.partnercenter.genericoperations.IEntityCreateOperations.create*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.genericoperations"
   summary: "Creates a new entity."
@@ -50,7 +50,7 @@ references:
   name: "T1"
   nameWithType: "T1"
   fullName: "T1"
-- uid: "com.microsoft.store.partnercenter.genericoperations.IEntityCreateOperations<T,T1>.create*"
+- uid: "com.microsoft.store.partnercenter.genericoperations.IEntityCreateOperations.create*"
   name: "create"
   nameWithType: "IEntityCreateOperations<T,T1>.create"
   fullName: "com.microsoft.store.partnercenter.genericoperations.IEntityCreateOperations<T,T1>.create"
