--- a/docs-ref-autogen/com.microsoft.store.partnercenter.models.utils.Tuple.yml
+++ b/docs-ref-autogen/com.microsoft.store.partnercenter.models.utils.Tuple.yml
@@ -31,7 +31,7 @@ items:
   name: "Tuple(T1 item1, T2 item2)"
   nameWithType: "Tuple<T1,T2>.Tuple(T1 item1, T2 item2)"
   fullName: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.Tuple(T1 item1, T2 item2)"
-  overload: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.Tuple*"
+  overload: "com.microsoft.store.partnercenter.models.utils.Tuple.Tuple*"
   type: "Constructor"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -49,7 +49,7 @@ items:
   name: "getItem1()"
   nameWithType: "Tuple<T1,T2>.getItem1()"
   fullName: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.getItem1()"
-  overload: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.getItem1*"
+  overload: "com.microsoft.store.partnercenter.models.utils.Tuple.getItem1*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -64,7 +64,7 @@ items:
   name: "setItem1(T1 item1)"
   nameWithType: "Tuple<T1,T2>.setItem1(T1 item1)"
   fullName: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.setItem1(T1 item1)"
-  overload: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.setItem1*"
+  overload: "com.microsoft.store.partnercenter.models.utils.Tuple.setItem1*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -80,7 +80,7 @@ items:
   name: "getItem2()"
   nameWithType: "Tuple<T1,T2>.getItem2()"
   fullName: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.getItem2()"
-  overload: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.getItem2*"
+  overload: "com.microsoft.store.partnercenter.models.utils.Tuple.getItem2*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -95,7 +95,7 @@ items:
   name: "setItem2(T2 item2)"
   nameWithType: "Tuple<T1,T2>.setItem2(T2 item2)"
   fullName: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.setItem2(T2 item2)"
-  overload: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.setItem2*"
+  overload: "com.microsoft.store.partnercenter.models.utils.Tuple.setItem2*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -114,27 +114,27 @@ references:
   name: "T2"
   nameWithType: "T2"
   fullName: "T2"
-- uid: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.Tuple*"
+- uid: "com.microsoft.store.partnercenter.models.utils.Tuple.Tuple*"
   name: "Tuple"
   nameWithType: "Tuple<T1,T2>.Tuple"
   fullName: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.Tuple"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.getItem1*"
+- uid: "com.microsoft.store.partnercenter.models.utils.Tuple.getItem1*"
   name: "getItem1"
   nameWithType: "Tuple<T1,T2>.getItem1"
   fullName: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.getItem1"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.setItem1*"
+- uid: "com.microsoft.store.partnercenter.models.utils.Tuple.setItem1*"
   name: "setItem1"
   nameWithType: "Tuple<T1,T2>.setItem1"
   fullName: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.setItem1"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.getItem2*"
+- uid: "com.microsoft.store.partnercenter.models.utils.Tuple.getItem2*"
   name: "getItem2"
   nameWithType: "Tuple<T1,T2>.getItem2"
   fullName: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.getItem2"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.setItem2*"
+- uid: "com.microsoft.store.partnercenter.models.utils.Tuple.setItem2*"
   name: "setItem2"
   nameWithType: "Tuple<T1,T2>.setItem2"
   fullName: "com.microsoft.store.partnercenter.models.utils.Tuple<T1,T2>.setItem2"
