--- a/docs-ref-autogen/com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.yml
+++ b/docs-ref-autogen/com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.yml
@@ -37,7 +37,7 @@ items:
   name: "QuadrupleTuple(T1 item1, T2 item2, T3 item3, T4 item4)"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.QuadrupleTuple(T1 item1, T2 item2, T3 item3, T4 item4)"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.QuadrupleTuple(T1 item1, T2 item2, T3 item3, T4 item4)"
-  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.QuadrupleTuple*"
+  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.QuadrupleTuple*"
   type: "Constructor"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -59,7 +59,7 @@ items:
   name: "getItem1()"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.getItem1()"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem1()"
-  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem1*"
+  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.getItem1*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -74,7 +74,7 @@ items:
   name: "setItem1(T1 item1)"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.setItem1(T1 item1)"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem1(T1 item1)"
-  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem1*"
+  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.setItem1*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -90,7 +90,7 @@ items:
   name: "getItem2()"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.getItem2()"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem2()"
-  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem2*"
+  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.getItem2*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -105,7 +105,7 @@ items:
   name: "setItem2(T2 item2)"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.setItem2(T2 item2)"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem2(T2 item2)"
-  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem2*"
+  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.setItem2*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -121,7 +121,7 @@ items:
   name: "getItem3()"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.getItem3()"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem3()"
-  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem3*"
+  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.getItem3*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -136,7 +136,7 @@ items:
   name: "setItem3(T3 item3)"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.setItem3(T3 item3)"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem3(T3 item3)"
-  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem3*"
+  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.setItem3*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -152,7 +152,7 @@ items:
   name: "getItem4()"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.getItem4()"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem4()"
-  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem4*"
+  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.getItem4*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -167,7 +167,7 @@ items:
   name: "setItem4(T4 item4)"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.setItem4(T4 item4)"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem4(T4 item4)"
-  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem4*"
+  overload: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.setItem4*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -196,47 +196,47 @@ references:
   name: "T4"
   nameWithType: "T4"
   fullName: "T4"
-- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.QuadrupleTuple*"
+- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.QuadrupleTuple*"
   name: "QuadrupleTuple"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.QuadrupleTuple"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.QuadrupleTuple"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem1*"
+- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.getItem1*"
   name: "getItem1"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.getItem1"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem1"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem1*"
+- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.setItem1*"
   name: "setItem1"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.setItem1"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem1"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem2*"
+- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.getItem2*"
   name: "getItem2"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.getItem2"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem2"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem2*"
+- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.setItem2*"
   name: "setItem2"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.setItem2"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem2"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem3*"
+- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.getItem3*"
   name: "getItem3"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.getItem3"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem3"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem3*"
+- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.setItem3*"
   name: "setItem3"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.setItem3"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem3"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem4*"
+- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.getItem4*"
   name: "getItem4"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.getItem4"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.getItem4"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem4*"
+- uid: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple.setItem4*"
   name: "setItem4"
   nameWithType: "QuadrupleTuple<T1,T2,T3,T4>.setItem4"
   fullName: "com.microsoft.store.partnercenter.models.utils.QuadrupleTuple<T1,T2,T3,T4>.setItem4"
