--- a/docs-ref-autogen/com.microsoft.store.partnercenter.models.utils.TripletTuple.yml
+++ b/docs-ref-autogen/com.microsoft.store.partnercenter.models.utils.TripletTuple.yml
@@ -34,7 +34,7 @@ items:
   name: "TripletTuple(T1 item1, T2 item2, T3 item3)"
   nameWithType: "TripletTuple<T1,T2,T3>.TripletTuple(T1 item1, T2 item2, T3 item3)"
   fullName: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.TripletTuple(T1 item1, T2 item2, T3 item3)"
-  overload: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.TripletTuple*"
+  overload: "com.microsoft.store.partnercenter.models.utils.TripletTuple.TripletTuple*"
   type: "Constructor"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -54,7 +54,7 @@ items:
   name: "getItem1()"
   nameWithType: "TripletTuple<T1,T2,T3>.getItem1()"
   fullName: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.getItem1()"
-  overload: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.getItem1*"
+  overload: "com.microsoft.store.partnercenter.models.utils.TripletTuple.getItem1*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -69,7 +69,7 @@ items:
   name: "setItem1(T1 item1)"
   nameWithType: "TripletTuple<T1,T2,T3>.setItem1(T1 item1)"
   fullName: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.setItem1(T1 item1)"
-  overload: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.setItem1*"
+  overload: "com.microsoft.store.partnercenter.models.utils.TripletTuple.setItem1*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -85,7 +85,7 @@ items:
   name: "getItem2()"
   nameWithType: "TripletTuple<T1,T2,T3>.getItem2()"
   fullName: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.getItem2()"
-  overload: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.getItem2*"
+  overload: "com.microsoft.store.partnercenter.models.utils.TripletTuple.getItem2*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -100,7 +100,7 @@ items:
   name: "setItem2(T2 item2)"
   nameWithType: "TripletTuple<T1,T2,T3>.setItem2(T2 item2)"
   fullName: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.setItem2(T2 item2)"
-  overload: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.setItem2*"
+  overload: "com.microsoft.store.partnercenter.models.utils.TripletTuple.setItem2*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -116,7 +116,7 @@ items:
   name: "getItem3()"
   nameWithType: "TripletTuple<T1,T2,T3>.getItem3()"
   fullName: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.getItem3()"
-  overload: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.getItem3*"
+  overload: "com.microsoft.store.partnercenter.models.utils.TripletTuple.getItem3*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -131,7 +131,7 @@ items:
   name: "setItem3(T3 item3)"
   nameWithType: "TripletTuple<T1,T2,T3>.setItem3(T3 item3)"
   fullName: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.setItem3(T3 item3)"
-  overload: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.setItem3*"
+  overload: "com.microsoft.store.partnercenter.models.utils.TripletTuple.setItem3*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.models.utils"
   syntax:
@@ -155,37 +155,37 @@ references:
   name: "T3"
   nameWithType: "T3"
   fullName: "T3"
-- uid: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.TripletTuple*"
+- uid: "com.microsoft.store.partnercenter.models.utils.TripletTuple.TripletTuple*"
   name: "TripletTuple"
   nameWithType: "TripletTuple<T1,T2,T3>.TripletTuple"
   fullName: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.TripletTuple"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.getItem1*"
+- uid: "com.microsoft.store.partnercenter.models.utils.TripletTuple.getItem1*"
   name: "getItem1"
   nameWithType: "TripletTuple<T1,T2,T3>.getItem1"
   fullName: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.getItem1"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.setItem1*"
+- uid: "com.microsoft.store.partnercenter.models.utils.TripletTuple.setItem1*"
   name: "setItem1"
   nameWithType: "TripletTuple<T1,T2,T3>.setItem1"
   fullName: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.setItem1"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.getItem2*"
+- uid: "com.microsoft.store.partnercenter.models.utils.TripletTuple.getItem2*"
   name: "getItem2"
   nameWithType: "TripletTuple<T1,T2,T3>.getItem2"
   fullName: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.getItem2"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.setItem2*"
+- uid: "com.microsoft.store.partnercenter.models.utils.TripletTuple.setItem2*"
   name: "setItem2"
   nameWithType: "TripletTuple<T1,T2,T3>.setItem2"
   fullName: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.setItem2"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.getItem3*"
+- uid: "com.microsoft.store.partnercenter.models.utils.TripletTuple.getItem3*"
   name: "getItem3"
   nameWithType: "TripletTuple<T1,T2,T3>.getItem3"
   fullName: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.getItem3"
   package: "com.microsoft.store.partnercenter.models.utils"
-- uid: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.setItem3*"
+- uid: "com.microsoft.store.partnercenter.models.utils.TripletTuple.setItem3*"
   name: "setItem3"
   nameWithType: "TripletTuple<T1,T2,T3>.setItem3"
   fullName: "com.microsoft.store.partnercenter.models.utils.TripletTuple<T1,T2,T3>.setItem3"
