--- a/docs-ref-autogen/com.microsoft.store.partnercenter.customers.CustomerOperations.yml
+++ b/docs-ref-autogen/com.microsoft.store.partnercenter.customers.CustomerOperations.yml
@@ -32,6 +32,7 @@ items:
   - "com.microsoft.store.partnercenter.customers.CustomerOperations.getUsageBudget()"
   - "com.microsoft.store.partnercenter.customers.CustomerOperations.getUsageSummary()"
   - "com.microsoft.store.partnercenter.customers.CustomerOperations.getUsers()"
+  - "com.microsoft.store.partnercenter.customers.CustomerOperations.patch(com.microsoft.store.partnercenter.models.customers.Customer)"
   langs:
   - "java"
   name: "CustomerOperations"
@@ -441,7 +442,7 @@ items:
   overload: "com.microsoft.store.partnercenter.customers.CustomerOperations.getSubscribedSkus*"
   type: "Method"
   package: "com.microsoft.store.partnercenter.customers"
-  summary: "Obtains the subscribed skus for the customer."
+  summary: "Obtains the subscribed SKUs for the customer."
   syntax:
     content: "public ICustomerSubscribedSkuCollection getSubscribedSkus()"
     return:
@@ -513,6 +514,27 @@ items:
     return:
       type: "com.microsoft.store.partnercenter.customerusers.ICustomerUserCollection"
       description: "The customer usage spending budget operations."
+- uid: "com.microsoft.store.partnercenter.customers.CustomerOperations.patch(com.microsoft.store.partnercenter.models.customers.Customer)"
+  id: "patch(com.microsoft.store.partnercenter.models.customers.Customer)"
+  parent: "com.microsoft.store.partnercenter.customers.CustomerOperations"
+  langs:
+  - "java"
+  name: "patch(Customer customer)"
+  nameWithType: "CustomerOperations.patch(Customer customer)"
+  fullName: "com.microsoft.store.partnercenter.customers.CustomerOperations.patch(Customer customer)"
+  overload: "com.microsoft.store.partnercenter.customers.CustomerOperations.patch*"
+  type: "Method"
+  package: "com.microsoft.store.partnercenter.customers"
+  summary: "Removes the relationship between the partner and customer when RelationshipToPartner == CustomerPartnerRelationship.NONE."
+  syntax:
+    content: "public Customer patch(Customer customer)"
+    parameters:
+    - id: "customer"
+      type: "com.microsoft.store.partnercenter.models.customers.Customer"
+      description: "A customer with RelationshipToPartner == CustomerPartnerRelationship.NONE."
+    return:
+      type: "com.microsoft.store.partnercenter.models.customers.Customer"
+      description: "The information for the modified customer."
 references:
 - uid: "com.microsoft.store.partnercenter.IPartner"
   name: "IPartner"
@@ -761,6 +783,11 @@ references:
   name: "get"
   nameWithType: "CustomerOperations.get"
   fullName: "com.microsoft.store.partnercenter.customers.CustomerOperations.get"
+  package: "com.microsoft.store.partnercenter.customers"
+- uid: "com.microsoft.store.partnercenter.customers.CustomerOperations.patch*"
+  name: "patch"
+  nameWithType: "CustomerOperations.patch"
+  fullName: "com.microsoft.store.partnercenter.customers.CustomerOperations.patch"
   package: "com.microsoft.store.partnercenter.customers"
 - uid: "com.microsoft.store.partnercenter.customers.CustomerOperations.delete*"
   name: "delete"
