--- a/docs-ref-autogen/com.microsoft.store.partnercenter.customers.ICustomer.yml
+++ b/docs-ref-autogen/com.microsoft.store.partnercenter.customers.ICustomer.yml
@@ -40,11 +40,12 @@ items:
   package: "com.microsoft.store.partnercenter.customers"
   summary: "Groups operations that can be performed on a single partner customer."
   syntax:
-    content: "public interface ICustomer extends IPartnerComponentString, IEntityGetOperations<Customer>, IEntityDeleteOperations<Customer>"
+    content: "public interface ICustomer extends IPartnerComponentString, IEntityGetOperations<Customer>, IEntityDeleteOperations<Customer>, IEntityPatchOperations<Customer>"
   implements:
   - "com.microsoft.store.partnercenter.IPartnerComponentString"
   - "com.microsoft.store.partnercenter.genericoperations.IEntityGetOperations<com.microsoft.store.partnercenter.models.customers.Customer>"
   - "com.microsoft.store.partnercenter.genericoperations.IEntityDeleteOperations<com.microsoft.store.partnercenter.models.customers.Customer>"
+  - "com.microsoft.store.partnercenter.genericoperations.IEntityPatchOperations<com.microsoft.store.partnercenter.models.customers.Customer>"
 - uid: "com.microsoft.store.partnercenter.customers.ICustomer.delete()"
   id: "delete()"
   parent: "com.microsoft.store.partnercenter.customers.ICustomer"
@@ -745,6 +746,10 @@ references:
   name: "IPartnerComponentString"
   nameWithType: "IPartnerComponentString"
   fullName: "com.microsoft.store.partnercenter.IPartnerComponentString"
+- uid: "com.microsoft.store.partnercenter.genericoperations.IEntityPatchOperations<com.microsoft.store.partnercenter.models.customers.Customer>"
+  name: "IEntityPatchOperations<Customer>"
+  nameWithType: "IEntityPatchOperations<Customer>"
+  fullName: "com.microsoft.store.partnercenter.genericoperations.IEntityPatchOperations<com.microsoft.store.partnercenter.models.customers.Customer>"
 - uid: "com.microsoft.store.partnercenter.genericoperations.IEntityDeleteOperations<com.microsoft.store.partnercenter.models.customers.Customer>"
   name: "IEntityDeleteOperations<Customer>"
   nameWithType: "IEntityDeleteOperations<Customer>"
@@ -753,6 +758,10 @@ references:
   name: "IEntityGetOperations<Customer>"
   nameWithType: "IEntityGetOperations<Customer>"
   fullName: "com.microsoft.store.partnercenter.genericoperations.IEntityGetOperations<com.microsoft.store.partnercenter.models.customers.Customer>"
+- uid: "com.microsoft.store.partnercenter.genericoperations.IEntityPatchOperations"
+  name: "IEntityPatchOperations"
+  nameWithType: "IEntityPatchOperations"
+  fullName: "com.microsoft.store.partnercenter.genericoperations.IEntityPatchOperations"
 - uid: "com.microsoft.store.partnercenter.genericoperations.IEntityDeleteOperations"
   name: "IEntityDeleteOperations"
   nameWithType: "IEntityDeleteOperations"
