--- a/docs-ref-autogen/com.microsoft.store.partnercenter.models.ApiFault.yml
+++ b/docs-ref-autogen/com.microsoft.store.partnercenter.models.ApiFault.yml
@@ -8,9 +8,11 @@ items:
   - "com.microsoft.store.partnercenter.models.ApiFault.getErrorCode()"
   - "com.microsoft.store.partnercenter.models.ApiFault.getErrorData()"
   - "com.microsoft.store.partnercenter.models.ApiFault.getErrorMessage()"
+  - "com.microsoft.store.partnercenter.models.ApiFault.getIsRetryable()"
   - "com.microsoft.store.partnercenter.models.ApiFault.setErrorCode(java.lang.String)"
   - "com.microsoft.store.partnercenter.models.ApiFault.setErrorData(java.lang.Iterable<java.lang.Object>)"
   - "com.microsoft.store.partnercenter.models.ApiFault.setErrorMessage(java.lang.String)"
+  - "com.microsoft.store.partnercenter.models.ApiFault.setIsRetryable(boolean)"
   - "com.microsoft.store.partnercenter.models.ApiFault.toString()"
   langs:
   - "java"
@@ -103,6 +105,23 @@ items:
     return:
       type: "java.lang.String"
       description: "The error message."
+- uid: "com.microsoft.store.partnercenter.models.ApiFault.getIsRetryable()"
+  id: "getIsRetryable()"
+  parent: "com.microsoft.store.partnercenter.models.ApiFault"
+  langs:
+  - "java"
+  name: "getIsRetryable()"
+  nameWithType: "ApiFault.getIsRetryable()"
+  fullName: "com.microsoft.store.partnercenter.models.ApiFault.getIsRetryable()"
+  overload: "com.microsoft.store.partnercenter.models.ApiFault.getIsRetryable*"
+  type: "Method"
+  package: "com.microsoft.store.partnercenter.models"
+  summary: "Gets a flag indicating whether or not the fault is retryable."
+  syntax:
+    content: "public boolean getIsRetryable()"
+    return:
+      type: "boolean"
+      description: "A flag indicating whether or not the fault is retryable."
 - uid: "com.microsoft.store.partnercenter.models.ApiFault.setErrorCode(java.lang.String)"
   id: "setErrorCode(java.lang.String)"
   parent: "com.microsoft.store.partnercenter.models.ApiFault"
@@ -157,6 +176,24 @@ items:
     - id: "value"
       type: "java.lang.String"
       description: "The error message."
+- uid: "com.microsoft.store.partnercenter.models.ApiFault.setIsRetryable(boolean)"
+  id: "setIsRetryable(boolean)"
+  parent: "com.microsoft.store.partnercenter.models.ApiFault"
+  langs:
+  - "java"
+  name: "setIsRetryable(boolean value)"
+  nameWithType: "ApiFault.setIsRetryable(boolean value)"
+  fullName: "com.microsoft.store.partnercenter.models.ApiFault.setIsRetryable(boolean value)"
+  overload: "com.microsoft.store.partnercenter.models.ApiFault.setIsRetryable*"
+  type: "Method"
+  package: "com.microsoft.store.partnercenter.models"
+  summary: "Sets a flag indicating whether or not the fault is retryable."
+  syntax:
+    content: "public void setIsRetryable(boolean value)"
+    parameters:
+    - id: "value"
+      type: "boolean"
+      description: "A flag indicating whether or not the fault is retryable."
 - uid: "com.microsoft.store.partnercenter.models.ApiFault.toString()"
   id: "toString()"
   parent: "com.microsoft.store.partnercenter.models.ApiFault"
@@ -226,6 +263,21 @@ references:
   name: "setErrorData"
   nameWithType: "ApiFault.setErrorData"
   fullName: "com.microsoft.store.partnercenter.models.ApiFault.setErrorData"
+  package: "com.microsoft.store.partnercenter.models"
+- uid: "boolean"
+  spec.java:
+  - uid: "boolean"
+    name: "boolean"
+    fullName: "boolean"
+- uid: "com.microsoft.store.partnercenter.models.ApiFault.getIsRetryable*"
+  name: "getIsRetryable"
+  nameWithType: "ApiFault.getIsRetryable"
+  fullName: "com.microsoft.store.partnercenter.models.ApiFault.getIsRetryable"
+  package: "com.microsoft.store.partnercenter.models"
+- uid: "com.microsoft.store.partnercenter.models.ApiFault.setIsRetryable*"
+  name: "setIsRetryable"
+  nameWithType: "ApiFault.setIsRetryable"
+  fullName: "com.microsoft.store.partnercenter.models.ApiFault.setIsRetryable"
   package: "com.microsoft.store.partnercenter.models"
 - uid: "com.microsoft.store.partnercenter.models.ApiFault.toString*"
   name: "toString"
