--- a/docs-ref-autogen/com.microsoft.store.partnercenter.models.carts.CartLineItem.yml
+++ b/docs-ref-autogen/com.microsoft.store.partnercenter.models.carts.CartLineItem.yml
@@ -16,6 +16,7 @@ items:
   - "com.microsoft.store.partnercenter.models.carts.CartLineItem.getParticipants()"
   - "com.microsoft.store.partnercenter.models.carts.CartLineItem.getProvisioningContext()"
   - "com.microsoft.store.partnercenter.models.carts.CartLineItem.getQuantity()"
+  - "com.microsoft.store.partnercenter.models.carts.CartLineItem.getRenewsTo()"
   - "com.microsoft.store.partnercenter.models.carts.CartLineItem.getTermDuration()"
   - "com.microsoft.store.partnercenter.models.carts.CartLineItem.setAddOnItems(java.util.List<com.microsoft.store.partnercenter.models.carts.CartLineItem>)"
   - "com.microsoft.store.partnercenter.models.carts.CartLineItem.setBillingCycle(com.microsoft.store.partnercenter.models.products.BillingCycleType)"
@@ -28,6 +29,7 @@ items:
   - "com.microsoft.store.partnercenter.models.carts.CartLineItem.setParticipants(java.util.Collection<com.microsoft.store.partnercenter.models.utils.KeyValuePair<com.microsoft.store.partnercenter.models.carts.ParticipantType,java.lang.String>>)"
   - "com.microsoft.store.partnercenter.models.carts.CartLineItem.setProvisioningContext(java.util.Map<java.lang.String,java.lang.String>)"
   - "com.microsoft.store.partnercenter.models.carts.CartLineItem.setQuantity(int)"
+  - "com.microsoft.store.partnercenter.models.carts.CartLineItem.setRenewsTo(com.microsoft.store.partnercenter.models.carts.RenewsTo)"
   - "com.microsoft.store.partnercenter.models.carts.CartLineItem.setTermDuration(java.lang.String)"
   langs:
   - "java"
@@ -253,6 +255,23 @@ items:
     return:
       type: "int"
       description: "The product quantity."
+- uid: "com.microsoft.store.partnercenter.models.carts.CartLineItem.getRenewsTo()"
+  id: "getRenewsTo()"
+  parent: "com.microsoft.store.partnercenter.models.carts.CartLineItem"
+  langs:
+  - "java"
+  name: "getRenewsTo()"
+  nameWithType: "CartLineItem.getRenewsTo()"
+  fullName: "com.microsoft.store.partnercenter.models.carts.CartLineItem.getRenewsTo()"
+  overload: "com.microsoft.store.partnercenter.models.carts.CartLineItem.getRenewsTo*"
+  type: "Method"
+  package: "com.microsoft.store.partnercenter.models.carts"
+  summary: "Gets the renews to value."
+  syntax:
+    content: "public RenewsTo getRenewsTo()"
+    return:
+      type: "com.microsoft.store.partnercenter.models.carts.RenewsTo"
+      description: "The renews to value."
 - uid: "com.microsoft.store.partnercenter.models.carts.CartLineItem.getTermDuration()"
   id: "getTermDuration()"
   parent: "com.microsoft.store.partnercenter.models.carts.CartLineItem"
@@ -468,6 +487,24 @@ items:
     - id: "value"
       type: "int"
       description: "The product quantity."
+- uid: "com.microsoft.store.partnercenter.models.carts.CartLineItem.setRenewsTo(com.microsoft.store.partnercenter.models.carts.RenewsTo)"
+  id: "setRenewsTo(com.microsoft.store.partnercenter.models.carts.RenewsTo)"
+  parent: "com.microsoft.store.partnercenter.models.carts.CartLineItem"
+  langs:
+  - "java"
+  name: "setRenewsTo(RenewsTo value)"
+  nameWithType: "CartLineItem.setRenewsTo(RenewsTo value)"
+  fullName: "com.microsoft.store.partnercenter.models.carts.CartLineItem.setRenewsTo(RenewsTo value)"
+  overload: "com.microsoft.store.partnercenter.models.carts.CartLineItem.setRenewsTo*"
+  type: "Method"
+  package: "com.microsoft.store.partnercenter.models.carts"
+  summary: "Sets the renews to value."
+  syntax:
+    content: "public void setRenewsTo(RenewsTo value)"
+    parameters:
+    - id: "value"
+      type: "com.microsoft.store.partnercenter.models.carts.RenewsTo"
+      description: "The renews to value."
 - uid: "com.microsoft.store.partnercenter.models.carts.CartLineItem.setTermDuration(java.lang.String)"
   id: "setTermDuration(java.lang.String)"
   parent: "com.microsoft.store.partnercenter.models.carts.CartLineItem"
@@ -672,6 +709,20 @@ references:
   name: "setQuantity"
   nameWithType: "CartLineItem.setQuantity"
   fullName: "com.microsoft.store.partnercenter.models.carts.CartLineItem.setQuantity"
+  package: "com.microsoft.store.partnercenter.models.carts"
+- uid: "com.microsoft.store.partnercenter.models.carts.RenewsTo"
+  name: "RenewsTo"
+  nameWithType: "RenewsTo"
+  fullName: "com.microsoft.store.partnercenter.models.carts.RenewsTo"
+- uid: "com.microsoft.store.partnercenter.models.carts.CartLineItem.getRenewsTo*"
+  name: "getRenewsTo"
+  nameWithType: "CartLineItem.getRenewsTo"
+  fullName: "com.microsoft.store.partnercenter.models.carts.CartLineItem.getRenewsTo"
+  package: "com.microsoft.store.partnercenter.models.carts"
+- uid: "com.microsoft.store.partnercenter.models.carts.CartLineItem.setRenewsTo*"
+  name: "setRenewsTo"
+  nameWithType: "CartLineItem.setRenewsTo"
+  fullName: "com.microsoft.store.partnercenter.models.carts.CartLineItem.setRenewsTo"
   package: "com.microsoft.store.partnercenter.models.carts"
 - uid: "com.microsoft.store.partnercenter.models.carts.CartLineItem.getTermDuration*"
   name: "getTermDuration"
