--- a/docs-ref-autogen/com.microsoft.store.partnercenter.models.orders.OrderLineItem.yml
+++ b/docs-ref-autogen/com.microsoft.store.partnercenter.models.orders.OrderLineItem.yml
@@ -13,6 +13,7 @@ items:
   - "com.microsoft.store.partnercenter.models.orders.OrderLineItem.getPricing()"
   - "com.microsoft.store.partnercenter.models.orders.OrderLineItem.getProvisioningContext()"
   - "com.microsoft.store.partnercenter.models.orders.OrderLineItem.getQuantity()"
+  - "com.microsoft.store.partnercenter.models.orders.OrderLineItem.getRenewsTo()"
   - "com.microsoft.store.partnercenter.models.orders.OrderLineItem.getSubscriptionId()"
   - "com.microsoft.store.partnercenter.models.orders.OrderLineItem.getTermDuration()"
   - "com.microsoft.store.partnercenter.models.orders.OrderLineItem.getTransactionType()"
@@ -24,6 +25,7 @@ items:
   - "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setPricing(com.microsoft.store.partnercenter.models.orders.Pricing)"
   - "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setProvisioningContext(java.util.Map<java.lang.String,java.lang.String>)"
   - "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setQuantity(int)"
+  - "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setRenewsTo(com.microsoft.store.partnercenter.models.orders.RenewsTo)"
   - "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setSubscriptionId(java.lang.String)"
   - "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setTermDuration(java.lang.String)"
   - "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setTransactionType(java.lang.String)"
@@ -205,6 +207,23 @@ items:
     return:
       type: "int"
       description: "The product quantity."
+- uid: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.getRenewsTo()"
+  id: "getRenewsTo()"
+  parent: "com.microsoft.store.partnercenter.models.orders.OrderLineItem"
+  langs:
+  - "java"
+  name: "getRenewsTo()"
+  nameWithType: "OrderLineItem.getRenewsTo()"
+  fullName: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.getRenewsTo()"
+  overload: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.getRenewsTo*"
+  type: "Method"
+  package: "com.microsoft.store.partnercenter.models.orders"
+  summary: "Gets the renews to value."
+  syntax:
+    content: "public RenewsTo getRenewsTo()"
+    return:
+      type: "com.microsoft.store.partnercenter.models.orders.RenewsTo"
+      description: "The renews to value."
 - uid: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.getSubscriptionId()"
   id: "getSubscriptionId()"
   parent: "com.microsoft.store.partnercenter.models.orders.OrderLineItem"
@@ -400,6 +419,24 @@ items:
     - id: "value"
       type: "int"
       description: "The product quantity."
+- uid: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setRenewsTo(com.microsoft.store.partnercenter.models.orders.RenewsTo)"
+  id: "setRenewsTo(com.microsoft.store.partnercenter.models.orders.RenewsTo)"
+  parent: "com.microsoft.store.partnercenter.models.orders.OrderLineItem"
+  langs:
+  - "java"
+  name: "setRenewsTo(RenewsTo value)"
+  nameWithType: "OrderLineItem.setRenewsTo(RenewsTo value)"
+  fullName: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setRenewsTo(RenewsTo value)"
+  overload: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setRenewsTo*"
+  type: "Method"
+  package: "com.microsoft.store.partnercenter.models.orders"
+  summary: "Sets the renews to value."
+  syntax:
+    content: "public void setRenewsTo(RenewsTo value)"
+    parameters:
+    - id: "value"
+      type: "com.microsoft.store.partnercenter.models.orders.RenewsTo"
+      description: "The renews to value."
 - uid: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setSubscriptionId(java.lang.String)"
   id: "setSubscriptionId(java.lang.String)"
   parent: "com.microsoft.store.partnercenter.models.orders.OrderLineItem"
@@ -515,6 +552,11 @@ references:
   nameWithType: "OrderLineItem.getParentSubscriptionId"
   fullName: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.getParentSubscriptionId"
   package: "com.microsoft.store.partnercenter.models.orders"
+- uid: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setParentSubscriptionId*"
+  name: "setParentSubscriptionId"
+  nameWithType: "OrderLineItem.setParentSubscriptionId"
+  fullName: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setParentSubscriptionId"
+  package: "com.microsoft.store.partnercenter.models.orders"
 - uid: "com.microsoft.store.partnercenter.models.orders.Pricing"
   name: "Pricing"
   nameWithType: "Pricing"
@@ -566,10 +608,19 @@ references:
   nameWithType: "OrderLineItem.setQuantity"
   fullName: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setQuantity"
   package: "com.microsoft.store.partnercenter.models.orders"
-- uid: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setParentSubscriptionId*"
-  name: "setParentSubscriptionId"
-  nameWithType: "OrderLineItem.setParentSubscriptionId"
-  fullName: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setParentSubscriptionId"
+- uid: "com.microsoft.store.partnercenter.models.orders.RenewsTo"
+  name: "RenewsTo"
+  nameWithType: "RenewsTo"
+  fullName: "com.microsoft.store.partnercenter.models.orders.RenewsTo"
+- uid: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.getRenewsTo*"
+  name: "getRenewsTo"
+  nameWithType: "OrderLineItem.getRenewsTo"
+  fullName: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.getRenewsTo"
+  package: "com.microsoft.store.partnercenter.models.orders"
+- uid: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setRenewsTo*"
+  name: "setRenewsTo"
+  nameWithType: "OrderLineItem.setRenewsTo"
+  fullName: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.setRenewsTo"
   package: "com.microsoft.store.partnercenter.models.orders"
 - uid: "com.microsoft.store.partnercenter.models.orders.OrderLineItem.getSubscriptionId*"
   name: "getSubscriptionId"
