--- a/docs-ref-autogen/com.microsoft.store.partnercenter.models.products.yml
+++ b/docs-ref-autogen/com.microsoft.store.partnercenter.models.products.yml
@@ -6,6 +6,8 @@ items:
   - "com.microsoft.store.partnercenter.models.products.Availability"
   - "com.microsoft.store.partnercenter.models.products.AvailabilityTerm"
   - "com.microsoft.store.partnercenter.models.products.BillingCycleType"
+  - "com.microsoft.store.partnercenter.models.products.CancellationPolicy"
+  - "com.microsoft.store.partnercenter.models.products.CancellationRefundOption"
   - "com.microsoft.store.partnercenter.models.products.CurrencyInfo"
   - "com.microsoft.store.partnercenter.models.products.InventoryCheckRequest"
   - "com.microsoft.store.partnercenter.models.products.InventoryItem"
@@ -13,6 +15,7 @@ items:
   - "com.microsoft.store.partnercenter.models.products.ItemType"
   - "com.microsoft.store.partnercenter.models.products.Product"
   - "com.microsoft.store.partnercenter.models.products.ProductLinks"
+  - "com.microsoft.store.partnercenter.models.products.RenewalOption"
   - "com.microsoft.store.partnercenter.models.products.Sku"
   langs:
   - "java"
@@ -35,6 +38,14 @@ references:
   name: "BillingCycleType"
   nameWithType: "BillingCycleType"
   fullName: "com.microsoft.store.partnercenter.models.products.BillingCycleType"
+- uid: "com.microsoft.store.partnercenter.models.products.CancellationPolicy"
+  name: "CancellationPolicy"
+  nameWithType: "CancellationPolicy"
+  fullName: "com.microsoft.store.partnercenter.models.products.CancellationPolicy"
+- uid: "com.microsoft.store.partnercenter.models.products.CancellationRefundOption"
+  name: "CancellationRefundOption"
+  nameWithType: "CancellationRefundOption"
+  fullName: "com.microsoft.store.partnercenter.models.products.CancellationRefundOption"
 - uid: "com.microsoft.store.partnercenter.models.products.CurrencyInfo"
   name: "CurrencyInfo"
   nameWithType: "CurrencyInfo"
@@ -63,6 +74,10 @@ references:
   name: "ProductLinks"
   nameWithType: "ProductLinks"
   fullName: "com.microsoft.store.partnercenter.models.products.ProductLinks"
+- uid: "com.microsoft.store.partnercenter.models.products.RenewalOption"
+  name: "RenewalOption"
+  nameWithType: "RenewalOption"
+  fullName: "com.microsoft.store.partnercenter.models.products.RenewalOption"
 - uid: "com.microsoft.store.partnercenter.models.products.Sku"
   name: "Sku"
   nameWithType: "Sku"
