--- a/docs-ref-autogen/com.microsoft.store.partnercenter.models.subscriptions.Subscription.yml
+++ b/docs-ref-autogen/com.microsoft.store.partnercenter.models.subscriptions.Subscription.yml
@@ -27,6 +27,7 @@ items:
   - "com.microsoft.store.partnercenter.models.subscriptions.Subscription.getPublisherName()"
   - "com.microsoft.store.partnercenter.models.subscriptions.Subscription.getQuantity()"
   - "com.microsoft.store.partnercenter.models.subscriptions.Subscription.getRefundOptions()"
+  - "com.microsoft.store.partnercenter.models.subscriptions.Subscription.getRenewalTermDuration()"
   - "com.microsoft.store.partnercenter.models.subscriptions.Subscription.getStatus()"
   - "com.microsoft.store.partnercenter.models.subscriptions.Subscription.getSuspensionReasons()"
   - "com.microsoft.store.partnercenter.models.subscriptions.Subscription.getTermDuration()"
@@ -50,6 +51,7 @@ items:
   - "com.microsoft.store.partnercenter.models.subscriptions.Subscription.setPublisherName(java.lang.String)"
   - "com.microsoft.store.partnercenter.models.subscriptions.Subscription.setQuantity(int)"
   - "com.microsoft.store.partnercenter.models.subscriptions.Subscription.setRefundOptions(java.lang.Iterable<com.microsoft.store.partnercenter.models.subscriptions.RefundOption>)"
+  - "com.microsoft.store.partnercenter.models.subscriptions.Subscription.setRenewalTermDuration(java.lang.String)"
   - "com.microsoft.store.partnercenter.models.subscriptions.Subscription.setStatus(com.microsoft.store.partnercenter.models.subscriptions.SubscriptionStatus)"
   - "com.microsoft.store.partnercenter.models.subscriptions.Subscription.setSuspensionReasons(java.lang.Iterable<java.lang.String>)"
   - "com.microsoft.store.partnercenter.models.subscriptions.Subscription.setTermDuration(java.lang.String)"
@@ -459,6 +461,23 @@ items:
     return:
       type: "java.lang.Iterable<com.microsoft.store.partnercenter.models.subscriptions.RefundOption>"
       description: "The refund options for this subscription if applicable."
+- uid: "com.microsoft.store.partnercenter.models.subscriptions.Subscription.getRenewalTermDuration()"
+  id: "getRenewalTermDuration()"
+  parent: "com.microsoft.store.partnercenter.models.subscriptions.Subscription"
+  langs:
+  - "java"
+  name: "getRenewalTermDuration()"
+  nameWithType: "Subscription.getRenewalTermDuration()"
+  fullName: "com.microsoft.store.partnercenter.models.subscriptions.Subscription.getRenewalTermDuration()"
+  overload: "com.microsoft.store.partnercenter.models.subscriptions.Subscription.getRenewalTermDuration*"
+  type: "Method"
+  package: "com.microsoft.store.partnercenter.models.subscriptions"
+  summary: "Gets the renewal term duration."
+  syntax:
+    content: "public String getRenewalTermDuration()"
+    return:
+      type: "java.lang.String"
+      description: "The renewal term duration."
 - uid: "com.microsoft.store.partnercenter.models.subscriptions.Subscription.getStatus()"
   id: "getStatus()"
   parent: "com.microsoft.store.partnercenter.models.subscriptions.Subscription"
@@ -851,6 +870,24 @@ items:
     - id: "value"
       type: "java.lang.Iterable<com.microsoft.store.partnercenter.models.subscriptions.RefundOption>"
       description: "The refund options for this subscription if applicable."
+- uid: "com.microsoft.store.partnercenter.models.subscriptions.Subscription.setRenewalTermDuration(java.lang.String)"
+  id: "setRenewalTermDuration(java.lang.String)"
+  parent: "com.microsoft.store.partnercenter.models.subscriptions.Subscription"
+  langs:
+  - "java"
+  name: "setRenewalTermDuration(String value)"
+  nameWithType: "Subscription.setRenewalTermDuration(String value)"
+  fullName: "com.microsoft.store.partnercenter.models.subscriptions.Subscription.setRenewalTermDuration(String value)"
+  overload: "com.microsoft.store.partnercenter.models.subscriptions.Subscription.setRenewalTermDuration*"
+  type: "Method"
+  package: "com.microsoft.store.partnercenter.models.subscriptions"
+  summary: "Sets the renewal term duration."
+  syntax:
+    content: "public void setRenewalTermDuration(String value)"
+    parameters:
+    - id: "value"
+      type: "java.lang.String"
+      description: "The renewal term duration."
 - uid: "com.microsoft.store.partnercenter.models.subscriptions.Subscription.setStatus(com.microsoft.store.partnercenter.models.subscriptions.SubscriptionStatus)"
   id: "setStatus(com.microsoft.store.partnercenter.models.subscriptions.SubscriptionStatus)"
   parent: "com.microsoft.store.partnercenter.models.subscriptions.Subscription"
@@ -1238,6 +1275,16 @@ references:
   name: "setRefundOptions"
   nameWithType: "Subscription.setRefundOptions"
   fullName: "com.microsoft.store.partnercenter.models.subscriptions.Subscription.setRefundOptions"
+  package: "com.microsoft.store.partnercenter.models.subscriptions"
+- uid: "com.microsoft.store.partnercenter.models.subscriptions.Subscription.getRenewalTermDuration*"
+  name: "getRenewalTermDuration"
+  nameWithType: "Subscription.getRenewalTermDuration"
+  fullName: "com.microsoft.store.partnercenter.models.subscriptions.Subscription.getRenewalTermDuration"
+  package: "com.microsoft.store.partnercenter.models.subscriptions"
+- uid: "com.microsoft.store.partnercenter.models.subscriptions.Subscription.setRenewalTermDuration*"
+  name: "setRenewalTermDuration"
+  nameWithType: "Subscription.setRenewalTermDuration"
+  fullName: "com.microsoft.store.partnercenter.models.subscriptions.Subscription.setRenewalTermDuration"
   package: "com.microsoft.store.partnercenter.models.subscriptions"
 - uid: "com.microsoft.store.partnercenter.models.Contract"
   name: "Contract"
