--- a/docs-ref-autogen/toc.yml
+++ b/docs-ref-autogen/toc.yml
@@ -135,6 +135,8 @@
     name: "OrderError"
   - uid: "com.microsoft.store.partnercenter.models.carts.ParticipantType"
     name: "ParticipantType"
+  - uid: "com.microsoft.store.partnercenter.models.carts.RenewsTo"
+    name: "RenewsTo"
 - uid: "com.microsoft.store.partnercenter.configuration"
   name: "com.microsoft.store.partnercenter.configuration"
   items:
@@ -685,6 +687,8 @@
     name: "Pricing"
   - uid: "com.microsoft.store.partnercenter.models.orders.QuantityProvisioningStatus"
     name: "QuantityProvisioningStatus"
+  - uid: "com.microsoft.store.partnercenter.models.orders.RenewsTo"
+    name: "RenewsTo"
 - uid: "com.microsoft.store.partnercenter.orders"
   name: "com.microsoft.store.partnercenter.orders"
   items:
@@ -813,6 +817,10 @@
     name: "AvailabilityTerm"
   - uid: "com.microsoft.store.partnercenter.models.products.BillingCycleType"
     name: "BillingCycleType"
+  - uid: "com.microsoft.store.partnercenter.models.products.CancellationPolicy"
+    name: "CancellationPolicy"
+  - uid: "com.microsoft.store.partnercenter.models.products.CancellationRefundOption"
+    name: "CancellationRefundOption"
   - uid: "com.microsoft.store.partnercenter.models.products.CurrencyInfo"
     name: "CurrencyInfo"
   - uid: "com.microsoft.store.partnercenter.models.products.InventoryCheckRequest"
@@ -827,6 +835,8 @@
     name: "Product"
   - uid: "com.microsoft.store.partnercenter.models.products.ProductLinks"
     name: "ProductLinks"
+  - uid: "com.microsoft.store.partnercenter.models.products.RenewalOption"
+    name: "RenewalOption"
   - uid: "com.microsoft.store.partnercenter.models.products.Sku"
     name: "Sku"
 - uid: "com.microsoft.store.partnercenter.products"
